force-app/main/default/objects/redwing__ILT_Event_Class__c/redwing__ILT_Event_Class__c.object-meta.xml
<CustomObject>
    <label>ILT Event Class</label>
    <nameField>
        <displayFormat>ILTEC-{0000000}</displayFormat>
        <label>ILT Event Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Event Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>