force-app/main/default/objects/redwing__ILT_Event_Class__c/fields/redwing__ILT_Event__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Event__c</fullName>
    <label>ILT Event</label>
    <referenceTo>redwing__ILT_Event__c</referenceTo>
    <relationshipLabel>ILT Event Classes</relationshipLabel>
    <relationshipName>ILT_Event_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>