force-app/main/default/objects/redwing__ILT_Event_Class__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Learning__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ILT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>ILT Event Classes</relationshipLabel>
    <relationshipName>ILT_Event_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>